# Codex_Omics

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: acceptance-matrix.md  agent-integration.md  environment-setup.md  plugin-installation.md  plugin-package.md  release-checklist.md  remote-validation.md  user-guide.md
envs/: activate-nextflow.sh  nextflow-singularity.config  nfcore.yaml  omics-base.yaml  scverse.yaml  scvi-tools.yaml
examples/nfcore_riboseq/: metadata.csv  omics_run_spec.yaml  samplesheet.csv
examples/nfcore_rnaseq/: omics_run_spec.yaml  samplesheet.csv
examples/nfcore_scrnaseq/: metadata.csv  omics_run_spec.yaml  samplesheet.csv
examples/nfcore_spatialvi/: metadata_raw.csv  omics_run_spec.yaml  samplesheet_processed.csv  samplesheet_raw.csv
examples/nfcore_template/: metadata.csv  omics_run_spec.yaml  samplesheet.csv
examples/scrna_qc/: omics_run_spec.yaml
examples/scvi/: omics_run_spec.yaml
examples/workflows/: scrna_qc_scvi.approved.yaml  scrna_qc_scvi.yaml
plugins/omics-analysis/: skill_registry.yaml
scripts/acceptance/: prepare_test_inputs.py  run_all.sh  run_atac.sh  run_bulk_rna.sh  run_scvi.sh
scripts/release/: build_plugin_package.py  check_release.py
src/omics_codex/: __init__.py  cli.py  report.py  router.py  skill_template.py  workflow.py
tests/heavy/: test_nfcore_rnaseq_profile.py  test_scvi_family_training.py
tests/integration/: test_plugin_dry_run.py  test_scrna_qc_synthetic.py  test_scvi_validate_synthetic.py  test_workflow_scrna_scvi.py
tests/smoke/: test_cli.py  (+1 more)
(+255 files in other folders)
